# MCP-Project

CLient/: .gitignore  client1.py  pyproject.toml
CLient-ArithmaticOperation/: client.py  main.py  pyproject.toml
ExpenseTracker-LocalMCP/: GUIDE.md  main.py  pyproject.toml
ToDo-LocalMCP/: README.md  categories.json  main.py  pyproject.toml  todos.db
